--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "description": "API for WikiBoard",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^1.0.0",
     "express": "^4.10.2",
-    "mysql": "^2.13.0",
-    "socket.io": "^1.7.3",
     "minimist": "*",
     "mustache-express": "^1.2.5",
-    "ejs": "^1.0.0"
+    "mysql": "^2.13.0",
+    "socket.io": "^1.7.3"
   }
 }
