--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for Zen Board",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node test.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
