--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha test/integration/test.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
@@ -17,5 +18,9 @@
     "mustache-express": "^1.2.5",
     "mysql": "^2.13.0",
     "socket.io": "^1.7.3"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
   }
 }
