--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "ejs": "^2.5.5",
+    "debug": "^3.1.0",
     "express": "^4.10.2",
     "minimist": "*",
-    "mustache-express": "^1.2.5",
+    "morgan": "^1.9.0",
     "mysql": "^2.13.0",
     "socket.io": "^1.7.3"
   },
